--- a/TestAngular/app/index.html
+++ b/TestAngular/app/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://js.arcgis.com/3.8/js/esri/css/esri.css" />
     <link rel="stylesheet" href="styles/indexStyle.css" />
     <link rel="stylesheet" href="widgets/css/agsjs.css" />
+    <link rel="stylesheet" href="styles/jquery.contextmenu.css" />
 </head>
 <body ng-controller="MapCtrl" class="claro">
     <header>
@@ -31,7 +32,8 @@
             </div>
         </esri-map>
     </section>
-
+    <script src="scripts/jquery-2.1.0.js"></script>
+    <script src="scripts/jquery.contextmenu.js"></script>
     <!-- Carga el API de Angular y de ArcGIS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     <script src="http://js.arcgis.com/3.8/"></script>
